# BatchScriptShell

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  QWEN.md  README.md  TASKS.md  bss  bss_current  bss_exit_fixed  bss_find_improved  bss_fixed_parsing  bss_improved_parsing  bss_original  bss_redir_fixed  build.sh  cd_test.bat  cd_userprofile_test.bat  comprehensive_test.bat  configure.ac  minimal_test.bat  redirection_function.c  redirection_test.bat  run_all_tests.sh  shell.c  shell.c.bak  shell.h  shell_working.c  simple_test.bat  test.bat  test_builtins.bat  test_find.bat  test_find_simple.bat  test_minimal.bat  test_redir.bat  test_version.bat  web_scraper.py
docs/: 000_index.md  001_overview.md  003_batch_script_discussion.md  003_environment.md  004_commands.md  005_files.md  006_syntax.md  007_variables.md  008_comments.md  009_strings.md  010_arrays.md  011_decision_making.md  012_operators.md  013_date_time.md  014_input_output.md  015_return_code.md  016_functions.md  017_process.md  018_aliases.md  019_devices.md  020_registry.md  021_network.md  022_printing.md  023_debugging.md  024_logging.md  025_quick_guide.md  026_useful_resources.md  COPYING
tests/: ADDITIONAL_TESTS_README.md  README.md  additional_commands_test.bat  cd_test.bat  certain_failure_test.bat  complex_test.bat  comprehensive_test.bat  copy_test.bat  del_test.bat  dir_test.bat  dos_features_test.bat  echo_test.bat  failing_test.bat  failing_test2.bat  file_commands_test.bat  interactive_commands_test.bat  md_test.bat  move_test.bat  pause_test.bat  pipe_test.bat  rd_test.bat  (+4 more)
(+46 files in other folders)
